# projects-c

./: README.md
example_p2p/: a.out  chord.cpp  p2p.cpp
example_p2p/tcp_example/example-client/: client  client.cpp
example_p2p/tcp_example/example-server/: Makefile  server  server.cpp
example_p2p/tcp_example/models/: models.cpp  models.h
example_p2p/tcp_example/src/: .TCPServer.cpp.swp
examples-openmp/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  chronotimer.h  examples_openmp.cpp  examples_openmp.sh  utils_matrix.cpp  utils_matrix.h
